[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Zelda-pack/objects.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Structures/DungeonGate.gd" type="Script" id=2]
[ext_resource path="res://Sounds/Structures/Gates/doorOpen_2.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.5, 16 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 47.6595, 129.354, 13.4339, 12.5138 )

[node name="BaseDungeonGate" type="AnimatedSprite"]
script = ExtResource( 2 )

[node name="OpenFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )

[node name="InteractBaloom" type="Sprite" parent="StaticBody2D"]
rotation = -1.5723
texture = SubResource( 3 )

[connection signal="finished" from="OpenFX" to="." method="_on_OpenFX_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
